# yt_project

./: .env.example  .gitignore  Dockerfile  db.sqlite  pyproject.toml
src/api/: database.py  main.py
src/api/order/: models.py  order_view.py  schema.py
src/api/order/templates/: base.html  designer.html  index.html  update.html
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  order.py
